--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .board{
   display: flex;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
   justify-content: center;
+}
+p{
+  margin: 7px;
+  font-size: 7rem;
 }
 .snow{
 max-width: 400px;
@@ -10,6 +14,13 @@ max-width: 400px;
 .guess{
   display: flex;
 }
+.buttons{
+  display: flex;
+  align-items: space-between;
+  flex-wrap: wrap;
+}
 button{
-  max-width: 10px;
+  width: 20px;
+  margin: 5px;
+  padding:0;
 }
