--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,33 @@
-.board{
+.board {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-p{
+p {
   margin: 7px;
   font-size: 7rem;
 }
-.snow{
-max-width: 400px;
+.snow {
+  max-width: 400px;
 }
-.guess{
+.guess {
   display: flex;
 }
-.buttons{
+.buttons {
   display: flex;
   align-items: space-between;
   flex-wrap: wrap;
+  width: 25rem;
 }
-button{
+
+.play-again {
+  width: 5rem;
+  height: 2rem;
+  border-radius: 5px;
+}
+button {
   width: 20px;
   margin: 5px;
-  padding:0;
+  padding: 0;
 }
