--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,10 @@ p {
   width: 5rem;
   height: 2rem;
   border-radius: 5px;
+  text-decoration: none;
+  color: black;
 }
+
 button {
   width: 20px;
   margin: 5px;
