--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,18 @@
-.board {
+img {
+  width: 300px;
+}
+
+.randomWord{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  list-style: none;
+  justify-content: space-between;
 }
-h1 {
-  margin-bottom: 1rem;
-}
-p {
-  margin: 7px;
-  font-size: 7rem;
-}
-img{
-max-width: 350px;
-}
-.snow {
-  max-width: 350px;
-}
-.snow {
-  max-width: 350px;
-}
-.guess {
+.letterButtons{
   display: flex;
-}
-.buttons {
-  display: flex;
-  align-items: space-between;
   flex-wrap: wrap;
-  width: 25rem;
+  list-style: none;
+  justify-content: space-between;
 }
-
-.play-again {
-  width: 5rem;
-  height: 2rem;
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-}
-
-button {
-  width: 20px;
-  margin: 5px;
-  padding: 0;
+.letterButtons li{
+  margin-right:10px;
 }
